--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>br.ccsl.cogroo</groupId>
-			<artifactId>cogroo-base</artifactId>
+			<groupId>org.cogroo.lang.pt_br</groupId>
+			<artifactId>cogroo-ann-pt_br</artifactId>
 			<version>4.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
